--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
         "laravelcollective/html": "^6.4",
+        "prevailexcel/laravel-nowpayments": "^1.0",
         "yoeunes/toastr": "^2.3"
     },
     "require-dev": {
